# planterm

./: .gitignore  LICENSE  README.md  library.json  library.properties
.github/workflows/: gitleaks.yml  publish.yaml  test.yaml
docs/: capture-protocol.md  protocol.md
esphome/: plan-bridge-example.yaml
esphome/components/plan_bridge/: README.md  __init__.py  plan_bridge.cpp  plan_bridge.h  plan_bridge_isr.cpp
examples/BusCapture/: BusCapture.ino
planterm/: CMakeLists.txt
src/: hex_format.h  plan_cap.h  plan_edit.h  plan_fields.h  plan_frame.h  plan_nav.h  plan_screen.h  plan_snapshot.h  plan_terminal.h  planterm.h
test/: mock_controller.h  test_hex_format.cpp  test_integration.cpp  test_plan_cap.cpp  test_plan_decode.cpp  test_plan_edit.cpp  test_plan_fields.cpp  test_plan_frame.cpp  test_plan_nav.cpp  test_plan_screen.cpp  test_plan_snapshot.cpp  walk_replay.h
